Support authentication via CSRF token
- Allow using cookie-based authentication with mwn
- Clean up authentication logic
- Update README and config to reflect latest changes

Closes: #20

--- a/config.example.json
+++ b/config.example.json
@@ -7,6 +7,8 @@
       "articlepath": "/wiki",
       "scriptpath": "/w",
       "token": null,
+      "username": null,
+      "password": null,
       "private": false
     },
     "localhost:8080": {
@@ -15,6 +17,8 @@
       "articlepath": "/wiki",
       "scriptpath": "/w",
       "token": null,
+      "username": null,
+      "password": null,
       "private": false
     }
   }
